# Research-Copilot

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  requirements.txt  setup_storage.py
app/: main.py
app/api/: models.py
app/config/: __init__.py  llm.py  settings.py
app/eval/: __init__.py  evaluator.py  test_evaluator.py  test_live.py  test_local_agent.py
app/graph/: __init__.py  agent.py  nodes.py  state.py
app/mcp/: __init__.py  server.py
app/prompts/: __init__.py
app/rag/: __init__.py  chunker.py  embeddings.py  loader.py  retriever.py  vectorstore.py
app/security/: __init__.py  guardrails.py  test_guardrails.py
app/tools/: __init__.py  gcs.py  gene.py  pubmed.py
submission_frontend/: pyproject.toml  requirements.txt  server.py
submission_frontend/static/assets/: .gitkeep
submission_frontend/static/css/: styles.css
submission_frontend/static/js/: app.js
submission_frontend/templates/: index.html
